--- a/main.css
+++ b/main.css
@@ -280,3 +280,304 @@
         font-family: sans-serif;
       }
   }
+
+  @media (min-width: 400px) and (max-width: 768px) {
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    
+    .div1{
+        margin-top: 10%;
+        width: 490px;
+        height: 490px;
+        border-radius: 50%;
+        background-image: url(p3_hjul.png);
+        background-size: 100% 100%;
+        box-shadow: 0 0 20px black;
+        .round{
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            transform: translatey(190px);
+            border: 10px solid black;
+            background-color: #fff;
+    
+            button{
+                width: 100%;
+                height: 100%;
+                background-color: #fff;
+                border-radius: 50%;
+                font-size: 20px;
+            }
+        }
+    
+        .othe1{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-160px) translateY(130px);
+        }
+    
+        .other2{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            color: #fff;
+            transform: translateX(-155px) translateY(150px) rotateZ(-13deg);
+        }
+    
+        .other3{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            color: #fff;
+    
+            transform: translateX(-140px) translateY(165px) rotateZ(-25deg);
+        }
+    
+        .other4{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-120px) translateY(180px) rotateZ(-38deg );
+        }
+    
+        .other5{
+            color: #fff;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-85px) translateY(180px) rotateZ(-55deg);
+        }
+    
+        .other6{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-47px) translateY(170px) rotateZ(-70deg);
+        }
+    
+        .other7{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-5px) translateY(155px) rotateZ(-85deg);
+        }
+        .other8{
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(37px) translateY(130px) rotateZ(-102deg);
+            color: #fff;
+        }
+        .other9{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(77px) translateY(90px) rotateZ(-118deg);
+        }
+        .other10{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(110px) translateY(40px) rotateZ(-125deg);
+        }
+        .other11{
+            color: #fff;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(130px) translateY(-20px) rotateZ(-145deg);
+        }
+        .other12{
+            color: #fff;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(145px) translateY(-80px) rotateZ(-160deg);
+        }
+        .other13{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(150px) translateY(-140px) rotateZ(-175deg);
+        }
+        .other14{
+            color: white;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(150px) translateY(-205px) rotateZ(-190deg);
+        }
+        .other15{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(135px) translateY(-270px) rotateZ(-210deg);
+        }
+        .other16{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(115px) translateY(-330px) rotateZ(-220deg);
+        }
+        .other17{
+            color: white;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(79px) translateY(-375px) rotateZ(-235deg);
+        }
+        .other18{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(40px) translateY(-415px) rotateZ(-255deg);
+        }
+        .other19{
+            color: black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(2px) translateY(-440px) rotateZ(-270deg);
+        }
+        .other20{
+            color: white;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-40px) translateY(-460px) rotateZ(-285deg);
+        }
+        .other21{
+            color:black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-75px) translateY(-470px) rotateZ(-300deg);
+        }
+        .other22{
+            color:black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-105px) translateY(-470px) rotateZ(-310deg);
+        }
+        .other23{
+            color:white;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-132px) translateY(-455px) rotateZ(-325deg);
+        }
+        .other24{
+            color:black;
+            width: 100px;
+            font-size: 20px;
+            font-family: sans-serif;
+            transform: translateX(-152px) translateY(-440px) rotateZ(-345deg);
+        }
+        
+    }
+    
+    
+    @keyframes round {
+        0%{}
+        100%{
+            transform: rotate(var(--random-degree));
+        }
+    }
+    
+    
+    .show {
+        position: absolute;
+        top: 60%;
+
+        left: 53%;
+        width: 0;
+        height: 0;
+        border-left: 20px solid transparent; /* Transparent left side */
+        border-right: 20px solid transparent; /* Transparent right side */
+        border-bottom: 80px solid black; /* The visible triangle */
+        transform: rotateZ(0deg) ;
+      }
+      
+    
+      .questions{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 70%;
+        height: auto;
+        gap: 15%;
+        display: none;
+        div{
+            width: 100%;
+            height: 20vh;
+            margin-left: 2%;
+            position: relative;
+            display: flex;
+            font-family: sans-serif;
+            align-items: center;
+            justify-content: start;
+            padding: 0 2%;
+            border: 1px solid black;
+    
+            button{
+                margin-left: 50%;
+                width: 20%;
+                height: 5vh;
+                font-size: 20px;
+                border: 2px solid black;
+                
+                background-color: #fff;
+                padding: 2px 5px;
+            }
+        }
+      }
+    
+      #qq{
+        width: 30%;
+        height: 7vh;
+        font-size: 20px;
+        font-family: sans-serif;
+        background-color: #fff;
+        margin-top: 35%;
+        margin-left: 42%;
+    
+      }
+    
+      
+      .alert{
+        border: 1px solid red;
+        width: 100%;
+        position: absolute;
+        top: 92%;
+        left: 2%;
+        display: flex;
+        flex-direction: column;
+        height: 20vh;
+        gap: 5%;    
+        h2{
+            color: red;
+            font-family: sans-serif;
+          }
+      }
+    
+     
+  }
+
+  h3{
+    position: absolute;
+    font-family: sans-serif;    
+    top: 1%;
+    font-size: 12px;
+  }
